vlib/v/checker/tests/struct_field_fn_args_order_err.out
vlib/v/checker/tests/struct_field_fn_args_order_err.vv:13:3: error: cannot assign to field `on_resize`: expected `fn (&Window, int, int)`, not `fn (int, int, &Window)`
   11 | fn main() {
   12 |     _ := WindowParams{
   13 |         on_resize: fn (a int, b int, win &Window) {
      |         ~~~~~~~~~~~~~~~~~~~~~   14 |             println(win)
   15 |         }
Details: `main.WindowResizeFn`'s expected argument `window` to be a pointer, but the passed argument `a` is NOT a pointer
