vlib/v/checker/tests/struct_field_fn_args_order_err.vv
pub type WindowResizeFn = fn (window &Window, w int, h int)

@[params]
pub struct WindowParams {
pub:
	on_resize WindowResizeFn = unsafe { nil }
}

pub struct Window {}

fn main() {
	_ := WindowParams{
		on_resize: fn (a int, b int, win &Window) {
			println(win)
		}
	}
}
